--- a/css.css
+++ b/css.css
@@ -6,7 +6,7 @@
 }
 html
 {
-    background-image: url(".Images/background1.jpg");
+    background-image: url("./Images/background1.jpg");
 }
 h1{
     margin-bottom: 20px;
