--- a/css.css
+++ b/css.css
@@ -6,7 +6,7 @@
 }
 body
 {
-    background-image: url("./Images/background1.jpg");
+    background-image: url("./Images/background2.jpg") no-repeat fixed center center;
 }
 h1{
     margin-bottom: 20px;
