--- a/css.css
+++ b/css.css
@@ -6,7 +6,11 @@
 }
 body
 {
-    background-image: url("./Images/background1.jpg") no-repeat fixed center center;
+  background-color: grey;
+  background-image: url("./Images/background2.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 h1{
     margin-bottom: 20px;
