--- a/css.css
+++ b/css.css
@@ -6,8 +6,8 @@
 }
 body
 {
-  background-color: grey;
-  background-image: url("./Images/background2.jpg");
+  background-color: #000;
+ /* background-image: url("./Images/background2.jpg");*/
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -175,6 +175,24 @@ width: 50%;
   width: 100%;
   text-align: center;
 }
+      .background-wrap {
+        position: fixed;
+        z-index: -1000;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        top: 0;
+        left: 0;
+      }
+      
+      #video-bg-elem {
+        position: absolute;
+        top: 0;
+        left: 0;
+        min-height: 100%;
+        min-width: 100%;
+        z-index: -1000;
+      }
 /*=============== ANIMATIONEN ===============*/
 .btn
 {
